--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "build": "netlify deploy --prod"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,9 +12,6 @@
     "ejs": "^3.1.10",
     "express": "^4.21.0",
     "mongoose": "^8.6.3",
-    "netlify-cli": "^17.36.2",
-    "netlify-lambda": "^2.0.16",
-    "serverless-http": "^3.2.0",
     "shortid": "^2.2.16"
   }
 }
